Kubedev/k8s/aula-ingress/path/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
  - host: blue.teclinux.tk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-nginx-color-blue
            port: 
              number: 80
  - host: green.teclinux.tk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-nginx-color-green
            port: 
              number: 80
