Kubedev/k8s/aula-ingress/path/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: teclinux.tk
      http:
        paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: service-nginx-color-blue
              port:
                number: 80
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: service-nginx-color-green
              port:
                number: 80
